# OnBoardingAssisstantBOBCLI

./: .env.example  .gitignore  Documentation.docx  IBM_Onboarding_Portal_Architecture_Guide.docx  README.md  index.html  main.py  onboarding_backend.py  pyproject.toml
.github/workflows/: deploy.yml
data/: Corporate_Structure_Verification_Guide.md  Enhanced_Due_Diligence_Manual.md  FATF_High_Risk_Jurisdictions_List.md  Institutional_Risk_Assessment_Matrix.md  Sanctions_and_PEP_Screening_Protocol.md  Standard_CDD_Policy.md  Suspicious_Activity_Red_Flags_Onboarding.md  UK_Money_Laundering_Regulations_2017_Summary.md  US_USA_PATRIOT_Act_Section_326_CIP.md  Wolfsberg_CBDDQ_v1.4.md
static/: app.css  app.js  quiz_data_easy.json  quiz_data_hard.json  quiz_data_medium.json
templates/: index.html
